--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         config:
           - os: ubuntu-latest
-          - os: macos-latest
+          - os: macos-11
           - os: windows-latest
 
     steps:
