--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Test
-        env:
-          SHOW_TEST_SUBPROCESS_OUTPUT: true
         run: make test
+
+      - name: Bench
+        run: make bench
